--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "24.0.3",
+    "@types/node": "11.9.3",
+    "@types/react": "16.8.2",
+    "@types/react-dom": "16.8.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.5"
+    "react-scripts": "2.1.5",
+    "typescript": "3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
