--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@types/node": "11.9.3",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
+    "@types/styled-components": "4.1.9",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.5",
+    "styled-components": "4.1.3",
     "typescript": "3.3.3"
   },
   "scripts": {
