--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@types/jest": "24.0.3",
     "@types/node": "11.9.3",
     "@types/numeral": "0.0.25",
+    "@types/ramda": "0.25.50",
     "@types/react": "16.8.2",
     "@types/react-dom": "16.8.0",
     "@types/styled-components": "4.1.9",
     "numeral": "2.0.6",
+    "ramda": "0.26.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.5",
